Fixed height issue on mobile and dark background

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   font-family: monospace, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  background-color: white;
   color-scheme: light dark;
 
   font-synthesis: none;
